better hello world example

--- a/src/components/hello-world/hello-world.pug
+++ b/src/components/hello-world/hello-world.pug
@@ -1,2 +1,3 @@
-mixin hello-world({ending} = {})
-  h1 Hello World#{ending}
+mixin hello-world({message, ending} = {})
+  if message
+    h1 #{message}#{ending}
