--- a/src/pages/index.marko
+++ b/src/pages/index.marko
@@ -1,5 +1,3 @@
-$ let test = "foo!"
-include('./_layout.marko') page_title="Home page"
-  @description -- this is a test
+include('./_layout.marko') page_title="Home page" description="this is a test"
   @main
     hello-world message="Hello World" ending="!"
