scss and simpler setup

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,9 +1,8 @@
+@import "variables";
 /* Base */
 :root {
   font-size: 10px;
   box-sizing: border-box;
-
-  --base-color: #333;
 }
 
 *, *:before, *:after {
@@ -14,6 +13,6 @@ body {
   font-size: 2.2rem;
   font-family: "Helvetica";
   font-weight: 300;
-  color: var(--base-color);
+  color: $base_color;
   line-height: 1.4;
 }
