scss and simpler setup

--- a/src/pages/_hero.pug
+++ b/src/pages/_hero.pug
@@ -1,6 +1,7 @@
 include /mixins/hello-world.pug
 
-+hello-world({
-  message: 'Hello world',
-  ending: '!',
-})
+section#hero
+  +hello-world({
+    message: 'Hello world',
+    ending: '!',
+  })
