--- a/src/pages/_layout.pug
+++ b/src/pages/_layout.pug
@@ -14,7 +14,7 @@ html
     block meta
       meta(name="description", content="#{description}")
     block styles
-      //- link(rel='stylesheet', href='assets/style.css')
+      //- link(rel='stylesheet', href='assets/css/style.css')
       link(rel='stylesheet' href='/assets/css/normalize.css')
       link(rel='stylesheet' href='/assets/css/fonts.css')
       link(rel='stylesheet' href='/assets/css/base.css')
