--- a/src/pages/_layout.pug
+++ b/src/pages/_layout.pug
@@ -4,7 +4,7 @@ block settings
     description = "A simple modular base with Pug Postcss and Babel"
 
 doctype html
-html
+html(lang="en")
   head
     meta(charset='utf-8')
     meta(http-equiv='x-ua-compatible', content='ie=edge')
