--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,6 +1,6 @@
 extends _layout.pug
 
-include /components/hello-world/hello-world.pug
+include /mixins/hello-world.pug
 
 block main
   +hello-world({
