--- a/src/mixins/hello-world.pug
+++ b/src/mixins/hello-world.pug
@@ -2,4 +2,4 @@ mixin hello-world({message, ending} = {})
   link(href='/assets/css/hello-world.css' rel='stylesheet')
   if message
     .m-hello
-      h1 #{message}#{ending}
+      p #{message}#{ending}
