--- a/src/pages/_layout.pug
+++ b/src/pages/_layout.pug
@@ -26,6 +26,7 @@ html(lang='en')
     block head
   body(id=page)
     block body
+      include _header
     main
       block main
     block footer
